compiler/fir/analysis-tests/testData/resolveWithStdlib/properties/backingField/explicitBackingFieldsWithDelegates.kt
// RUN_PIPELINE_TILL: FRONTEND
val thingWithDelefate by lazy { 2 as Number }
    <!BACKING_FIELD_FOR_DELEGATED_PROPERTY!>field<!> = 10

/* GENERATED_FIR_TAGS: asExpression, integerLiteral, lambdaLiteral, nullableType, propertyDeclaration, propertyDelegate */
